--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-<h1>Curriculum Vitae</h1>
-
-<nav class="navbar">
-  <ul>
-    <li><a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
-    <li><a routerLink="career" routerLinkActive="active" ariaCurrentWhenActive="page">Career</a></li>
-  </ul>
-</nav>
-
+<app-header></app-header>
 <router-outlet></router-outlet>
