--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,4 @@
         </div>
     </div>
 </div>
-<div id="aboutskills" class="box">
-    <h2>Skills</h2>
-    
-</div>
+<app-skills-percent-list></app-skills-percent-list>
