--- a/src/app/skills/skills-percent-list/skills-percent-list.component.html
+++ b/src/app/skills/skills-percent-list/skills-percent-list.component.html
@@ -1,4 +1,5 @@
 <h2>Skills</h2>
+<app-filter [filterValues]="types"></app-filter>
 <div *ngFor="let skillset of allSkills | keyvalue">
     <app-skills-percent name="{{skillset.key}}" [skills]="skillset.value"></app-skills-percent>
 </div>
