--- a/src/app/skills/skills-percent/skills-percent.component.scss
+++ b/src/app/skills/skills-percent/skills-percent.component.scss
@@ -1,13 +1,20 @@
 @import 'src/scss/variables';
-@import 'src/scss/link';
+@import 'src/scss/mixins';
 
 :host {
     & .skill-container {
         @include flex-list;
         &> div {
             & a, p{
-                @include link;
                 width:100%;
+            }
+            & p {
+                @include pill;
+                font-size: calc($elem-size / 1.75);
+            }
+            & a {
+                @include link;
+                font-size: calc($elem-size / 1.75);
             }
         }
     }
