--- a/src/app/skills/skills-percent/skills-percent.component.html
+++ b/src/app/skills/skills-percent/skills-percent.component.html
@@ -1,8 +1,9 @@
 <h3>{{name}}</h3>
 <div class="skill-container" *ngFor="let skill of skills | skillsFilter:['Applikation']">
     <div class="percent-{{skill.knowledgepercent}}">
-        <p *ngIf="!skill.url">{{skill.knowledgepercent}}% {{skill.name}}</p>
-        <a *ngIf="skill.url" href="{{skill.url}}">{{skill.knowledgepercent}}% {{skill.name}}</a>
+        {{skill.identifier}}
+        <!--p *ngIf="!skill.url">{{skill.knowledgepercent}}% {{skill.name}}</!--p>
+        <a-- *ngIf="skill.url" href="{{skill.url}}">{{skill.knowledgepercent}}% {{skill.name}}</a-->
     </div>
 </div>
 
