--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -2,7 +2,10 @@
 
 :host{
     @include flex-row;
-    & button {
+    & form {
+        width:100%;
+    }
+    & .filter-item-p {
         @include link;
     }
 }
