--- a/src/app/components/general/filter/filter.component.scss
+++ b/src/app/components/general/filter/filter.component.scss
@@ -1,5 +1,5 @@
-@import 'src/scss/mixins';
-@import 'src/scss/variables';
+@import 'src/scss/mixins.scss';
+@import 'src/scss/variables.scss';
 
 :host{
     @include flex-row;
