--- a/src/app/components/general/socials-button/socials-button.component.scss
+++ b/src/app/components/general/socials-button/socials-button.component.scss
@@ -1,5 +1,5 @@
-@import 'src/scss/variables';
-@import 'src/scss/mixins';
+@import 'src/scss/variables.scss';
+@import 'src/scss/mixins.scss';
 
 :host {
     & a {
