added entity and component inheritance/modularity

--- a/src/app/components/general/filter/filter.component.html
+++ b/src/app/components/general/filter/filter.component.html
@@ -1,3 +1,4 @@
+<p>{{filtersSelected$ | async | json}}</p>
 <form #filterForm="ngForm">
     {{filterForm.value | json}}
     <div class="filter-item" *ngFor="let filter of filterValues | keyvalue">
