--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,6 +15,7 @@ $elem-height: $elem-size * 4;
 $wrapper-padding: 2em 0;
 $img-width:15em;
 
+$defborder: solid $cool $elem-padding;
 
 $mono: RedHatMono, Courier, monospace;
 $sans: WorkSans, Helvetica, sans-serif;
