--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,5 +1,10 @@
 @import 'variables.scss';
 
+@mixin wrapper {
+    width: $wrapper-width;
+    padding:$wrapper-padding;
+}
+
 @mixin pill {
     display:inline-block;
     padding:$elem-padding;
