modulized button, added contactpoint and other career related comps

--- a/src/app/components/general/button/button.component.scss
+++ b/src/app/components/general/button/button.component.scss
@@ -2,7 +2,7 @@
 @import 'src/scss/mixins.scss';
 
 :host {
-    & a {
+    & span {
         @include link;
         @include flex-center;
         height:$elem-height;
