--- a/src/app/components/general/button/button.component.html
+++ b/src/app/components/general/button/button.component.html
@@ -1,3 +1,3 @@
-<a href="{{this.href}}">
+<span (click)="onClick()">
     <img src="{{this.type.image}}" alt="icon for {{this.name}} link">
-</a>
+</span>
