--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -1,20 +1,12 @@
 <div *ngFor="let career of careers">
-    <!--app-contentbox 
-        [image]='{"id":career.name,"name":career.name,"path":career.type.logo,"alt":career.type.name}'
-        title="{{career.type.name}}: {{career.name}}" 
-        description="{{career.yearfrom}} - {{career.yearto}}"> 
-    </app-contentbox-->
-
-    <app-contentbox *ngIf="career.type == ct.SCHOOL"
-        [image]='{"id":career.school?.name!,"name":career.school?.name!,"path":career.type.logo,"alt":career.type.name}'
-        title="{{career.type.name}}: {{career.school?.name!}}" 
-        description="{{career.yearfrom}} - {{career.yearto}}"> 
-    </app-contentbox>
-
-    <app-contentbox *ngIf="career.type == ct.WORK"
-        [image]='{"id":career.workplace?.name!,"name":career.workplace?.name!,"path":career.type.logo,"alt":career.type.name}'
-        title="{{career.type.name}}: {{career.workplace?.name!}}" 
-        description="{{career.yearfrom}} - {{career.yearto}}"> 
-    </app-contentbox>
-
+    <ng-container *ngIf="career.type == ct.SCHOOL ? career.school : career.workplace as item">
+        <app-contentbox
+            [image]='{"id":item.name,"name":item.name,"path":career.type.logo,"alt":career.type.name}'
+            title="{{career.type.name}}: {{item.name}}" 
+            description="{{career.yearfrom}} - {{career.yearto}}"> 
+            <div *ngFor="let contact of item.contactpoints" class="contactPoints">
+                <app-contactpoint [contact]="contact"></app-contactpoint>
+            </div>
+        </app-contentbox>
+    </ng-container>
 </div>
