--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,18 +1,7 @@
 <app-contentbox [image]="image" title="Welcome" description="{{me.firstname}} {{me.lastname}} ist {{me.birthdate | age}} alt">
-    <app-socials-button link="{{me.github}}" [type]="lt.GITHUB" name="Mein Github Profil"></app-socials-button>
-    <app-socials-button link="{{me.url}}" [type]="lt.URL" name="Meine Webseite"></app-socials-button>
-    <app-socials-button link="{{me.contact.phone}}" [type]="lt.PHONE" name="Meine Telefonnummer"></app-socials-button>
-    <app-socials-button link="{{me.contact.email}}" [type]="lt.MAIL" name="Meine E-Mail"></app-socials-button>
+    <app-button [onClick]="myGithub" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
+    <app-button [onClick]="myLink" [type]="lt.URL" name="Meine Webseite"></app-button>
+    <app-button [onClick]="callMe" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
+    <app-button [onClick]="mailMe" [type]="lt.MAIL" name="Meine E-Mail"></app-button>
 </app-contentbox>
-<!--img src="/assets/{{ me.image }}" alt="Profile picture" id="profilepic">
-<div class="box" id="details">
-    <h1>{{ me.firstname +" "+ me.lastname}} ist {{me.birthdate | age}} alt</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum hic omnis alias excepturi ipsum, numquam eos voluptatibus corrupti amet. Deleniti provident voluptate earum ea quibusdam cumque, adipisci aut voluptas sapiente.</p>
-    <div class="socials">
-        <app-socials-button link="{{me.github}}" [type]="lt.GITHUB" name="Mein Github Profil"></app-socials-button>
-        <app-socials-button link="{{me.url}}" [type]="lt.URL" name="Meine Webseite"></app-socials-button>
-        <app-socials-button link="{{myContact.phone}}" [type]="lt.PHONE" name="Meine Telefonnummer"></app-socials-button>
-        <app-socials-button link="{{myContact.email}}" [type]="lt.MAIL" name="Meine E-Mail"></app-socials-button>
-    </div>
-</div-->
 <app-skills-percent-list></app-skills-percent-list>
