implemented contentbox toggle between preview and fullview, added address + filter comp

--- a/src/app/components/general/button/button.component.html
+++ b/src/app/components/general/button/button.component.html
@@ -1,3 +1,3 @@
 <span (click)="onClick()">
-    <img src="{{this.type.image}}" alt="icon for {{this.name}} link">
+    <img src="{{this.type.image.path}}" alt="icon for {{this.name}} link">
 </span>
