--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,6 +15,12 @@ $elem-height: $elem-size * 4;
 $wrapper-padding: 2em 0;
 $img-width:15em;
 
+$contentbox-left-s:30%;
+$contentbox-right-s:70%;
+
+$contentbox-left-b:50%;
+$contentbox-right-b:50%;
+
 $defborder: solid $cool $elem-padding;
 
 $mono: RedHatMono, Courier, monospace;
