--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -1,11 +1,20 @@
 <div *ngFor="let career of careers">
     <ng-container *ngIf="career.type == ct.SCHOOL ? career.school : career.workplace as item">
         <app-contentbox
-            [image]='{"id":item.name,"name":item.name,"path":career.type.logo,"alt":career.type.name}'
-            title="{{career.type.name}}: {{item.name}}" 
-            description="{{career.yearfrom}} - {{career.yearto}}"> 
-            <div *ngFor="let contact of item.contactpoints" class="contactPoints">
-                <app-contactpoint [contact]="contact"></app-contactpoint>
+            [image]='{"id":item.name,"name":item.name,"path":career.type.logo.path,"alt":career.type.name}'
+            title="{{item.name}}" 
+            subTitle="{{career.yearfrom}} - {{career.yearto}}" 
+            description="{{career.description}}"
+            link="{{item.url}}"> 
+            <div class="bottomLinks">
+                <div #cp class="contactPoints">
+                    <img src="{{contactIcon.path}}" alt="{{contactIcon.alt}}" (click)="cp.classList.toggle('active')">
+                    <app-contactpoint *ngFor="let contact of item.contactpoints" [contact]="contact"></app-contactpoint>
+                </div>
+                <div #addr class="address">
+                    <img src="{{addressIcon.path}}" alt="{{addressIcon.alt}}" (click)="addr.classList.toggle('active')">
+                    <app-address [address]="item.address"></app-address>
+                </div>
             </div>
         </app-contentbox>
     </ng-container>
