created projects view

--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <ul>
-        <li><a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
+        <li><a routerLink="home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
         <li><a routerLink="career" routerLinkActive="active" ariaCurrentWhenActive="page">Career</a></li>
+        <li><a routerLink="projects" routerLinkActive="active" ariaCurrentWhenActive="page">Projects</a></li>
     </ul>
 </nav>
