--- a/src/app/components/general/header/header.component.scss
+++ b/src/app/components/general/header/header.component.scss
@@ -1,19 +1,22 @@
-@import 'src/scss/variables.scss';
-@import 'src/scss/mixins.scss';
+@import "src/scss/variables.scss";
+@import "src/scss/mixins.scss";
 
 :host {
-    width:100%;
+    width: 100%;
     & .navbar {
         background-color: $cool;
-        padding:$padding;
+        padding: $padding;
         & ul {
             @include flex-row;
-            margin:0;
-            padding:0;
+            margin: 0;
+            padding: 0;
             & li {
                 list-style: none;
                 & a {
                     @include link;
+                }
+                & .active {
+                    background-color: $white;
                 }
             }
         }
