--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,4 +1,4 @@
-<app-contentbox [image]="image" title="Welcome" description="{{me.firstname}} {{me.lastname}} ist {{me.birthdate | age}} alt">
+<app-contentbox [images]="[image]" title="Welcome" description="{{me.firstname}} {{me.lastname}} ist {{me.birthdate | age}} alt">
     <app-button [onClick]="myGithub" [type]="lt.GITHUB" name="Mein Github Profil"></app-button>
     <app-button [onClick]="myLink" [type]="lt.URL" name="Meine Webseite"></app-button>
     <app-button [onClick]="callMe" [type]="lt.PHONE" name="Meine Telefonnummer"></app-button>
