--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let career of careers">
-    <ng-container *ngIf="career.type == ct.SCHOOL ? career.school : career.workplace as item">
+    <ng-container *ngIf="career.type === ct.SCHOOL ? career.school : career.workplace as item">
         <app-contentbox
             [image]='{"id":item.name,"name":item.name,"path":career.type.logo.path,"alt":career.type.name}'
             title="{{item.name}}" 
