refactored scss, improved carousel

--- a/src/app/components/general/button/button.component.scss
+++ b/src/app/components/general/button/button.component.scss
@@ -4,6 +4,7 @@
 :host {
     & span {
         @include link;
+        @include pill;
         @include flex-center;
         height:$elem-height;
         width:$elem-height;
