--- a/src/app/components/general/filter/filter.component.scss
+++ b/src/app/components/general/filter/filter.component.scss
@@ -8,6 +8,7 @@
     }
     & .filter {
         @include link;
+        @include pill;
     }
     & .active {
         @include darken-little(background-color, $cool);
