--- a/src/app/components/views/projects/projects.component.scss
+++ b/src/app/components/views/projects/projects.component.scss
@@ -3,4 +3,8 @@
 
 :host {
     @include wrapper;
+    & .skillpill{
+        @include pill;
+        @include darken-little(background-color, $cool);
+    }
 }
