--- a/src/app/components/general/skills/skills-percent/skills-percent.component.scss
+++ b/src/app/components/general/skills/skills-percent/skills-percent.component.scss
@@ -14,6 +14,7 @@
             }
             & a {
                 @include link;
+                @include pill;
                 font-size: calc($elem-size / 1.75);
             }
         }
