--- a/src/app/components/views/career/career.component.scss
+++ b/src/app/components/views/career/career.component.scss
@@ -8,7 +8,8 @@
         & >div{
             @include flex-list;
             &>img{
-                @include link-image;
+                @include link;
+                @include preview-image;
             }
             & h5 {
                 @include pill;
