--- a/src/app/components/views/projects/projects.component.html
+++ b/src/app/components/views/projects/projects.component.html
@@ -1,8 +1,10 @@
-<div *ngFor="let project of projects">
-    <app-contentbox 
-        [image]='{id:"firebase_link",alt:"",name:"",path:project.image}'
-        title="{{project.name}}" 
-        subTitle="{{project.name}}" 
-        description="{{project.description}}"
-        link="{{project.url}}"></app-contentbox>
-</div>
+<app-contentbox *ngFor="let project of projects"
+    [image]='{id:"firebase_link",alt:"",name:"",path:project.image}'
+    title="{{project.name}}" 
+    subTitle="{{project.name}}" 
+    description="{{project.description}}"
+    link="{{project.url}}">
+    <div *ngFor="let skill of project.skills" class="skillpill">
+        {{skill.name}}
+    </div>
+</app-contentbox>
