--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,4 +1,5 @@
 @import 'variables.scss';
+@import 'screens.scss';
 
 @mixin wrapper {
     width: $wrapper-width;
@@ -23,7 +24,6 @@
 }
 
 @mixin link {
-    @include pill;
     text-decoration: none;
     border:none;
     &:hover {
@@ -32,9 +32,21 @@
     }
 }
 
+@mixin main-image-proportions {
+    max-width:100%;
+    max-height:80vh;
+    min-width: $img-width;
+    min-height: $img-width;
+    @include desktop-screen {
+    }
+    @include tablet-screen {
+        max-height:$img-width;
+        max-width:$img-width;
+    }
+}
+
 @mixin main-image {
-    max-height:$img-width;
-    max-width:$img-width;
+    @include main-image-proportions;
     display:block;
     margin:auto;
 }
@@ -43,11 +55,7 @@
     border-radius: $border-radius-circle;
     height:$elem-height;
     width:$elem-height;
-}
-
-@mixin link-image {
-    @include link;
-    @include preview-image;
+    padding:$elem-padding;
 }
 
 @mixin prefix($property, $value, $prefixes) {
@@ -60,6 +68,17 @@
 @mixin darken-little($property, $color) {
     #{$property}: darken($color, 15%);
     transition: #{$property} $trans-cb;
+}
+
+@mixin transition($property, $value) {
+    #{$property}: $value;
+    transition: #{$property} $trans-cb;
+
+}
+
+@mixin default-grid {
+    display:grid;
+    column-gap:$elem-padding;
 }
 
 @mixin flex-row {
@@ -105,4 +124,5 @@
     display:flex;
     flex-direction:column;
     align-items:baseline;
+    justify-content:center;
 }
